--- a/albert_tiny/albert_config_tiny.json
+++ b/albert_tiny/albert_config_tiny.json
@@ -18,6 +18,6 @@
   "pooler_type": "first_token_transform", 
   "type_vocab_size": 2, 
   "vocab_size": 21128,
-   "ln_type":"postln"
-
+  "ln_type":"postln",
+  "share_type":"all"
 }
